--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
 <html>
     <head>
 <style>
-	h1  {
-        font-size: 24pt;
-        color: red;
-        text-decoration: underline;
-        font-family: tahoma, helvetica, sans-serif;
-    }
-em  {
-        font-style: normal;
-        color: green;
-        background-color: lightgrey;
-        font-weight: bold;
+ h1 {
+      font: size 24pt ;
+      color: red;
+      text-decoration: underline;
+      font-family: Verdana, helvetica , sans-serif;
+      text-align: center;
+      border: thick solid red;
+      text-decoration: none;
+      padding: 1ex;
+      width: 50%;
+      }                                
+em             {
+    font-style: normal;
+    color: green;
+    background-color: lightgrey;
+    font-weight: bold;
 }
 ul li {
-        list-style-type: square;
+    list-style-type: square;
 }
+a:hover {
+    text-decoration: none;
+}
+li:first-child 
+{border: thick solid green;
+margin-bottom: 1em;
+padding: 1ex;
+width: 40%;
+}
+
+centered {
+    text-align: center;
 </style>
             Introduction to Information systems.
         </title>
@@ -26,7 +43,7 @@ ul li {
         <p>
             <strong>Introduction to Information Systems</strong>
         </p>
-        <p>
+       <p>
             <em>
                 Laura Hysa 
                 <br>
