--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ padding: 1ex;
 width: 40%;
 }
 
-centered {
+p.centered {
     text-align: center;
 </style>
             Introduction to Information systems.
