--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p.centered {
             <strong>Introduction to Information Systems</strong>
         </p>
 
-       <p>
+       <p class="centered">
             <em>
                 Laura Hysa 
                 <br>
